# aoc-2021

./: pyproject.toml
02/: 02.py
05/: 05.py
06/: 06.c  06.jl  06.py
07/: 07.c  07.jl  07.py
08/: 08.jl  08.py
09/: 09.cpp  09.jl  09.py
10/: 10.jl  10.py
13/: 13.py
14/: 14.c  14.jl  14.py
15/: 15.py
16/: 16.py
17/: 17.py
18/: 18.py  retry.py
19/: 19-opt.py  19.py
20/: 20.py
21/: 21.py
22/: 22.py
23/: 23.cpp  23.jl  23.py  23b.cpp  dup.txt  p2.txt  scratch.txt
24/: 24-par.py  24-rev.py  24-sym.py  24.cpp  24.ml  24.py  24search.py  bleh.txt  decompile.py  dune  sp.txt  stuff
25/: 25.c  25.jl  25.py
julia/: 01.jl
